--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A basic gesture control demo made with Google Mediapipe's Hand Tracking Javascript API",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
